# SDD-PIQA

./: .gitignore  ListToNpy.py  README.md  eval.py  image_rename.py  list2npy.py  pyproject.toml  pyrightconfig.json  train.py  train.sh  train_config.py  train_recognition.py  train_recognition_config.py
assets/: README.md
backbone/: metric.py
checkpoints/: README.md
data/: README.md
gen_pseudo_labels/: 1_gen_datalist.py  2_extract_feats.py  3_gen_pseudo_labels.py  README.md
generate_pseudo_labels/: 1_gen_datalist.py  2_extract_feats.py  3_gen_pseudo_labels.py  DATA.label  DATA.labelpath  README.md  gen_datalist.py  gen_pseudo_labels.py  generate_pseudo_labels.sh  train_recognition_config.py
generate_pseudo_labels/annotations/: distribution_info_tmp.txt  quality_pseudo_labels-BOCV.txt  quality_pseudo_labels-resnet50.txt  quality_pseudo_labels.txt  w_distances.txt
generate_pseudo_labels/extract_embedding/: config_test.py  extract_feats.py  extract_feats_config.py
generate_pseudo_labels/labels/: quality_pseudo_labels.txt
generate_pseudo_labels/npy/: shu_liang.py
logs/: README.md
npy/: shu_liang.py
scripts/: README.md  all_run.sh  gen_pseudo_labels.sh  kill_all.sh  run_all.sh  train.sh  train_rec.sh
train_recognition_model/: README.md  train_recognition.py  train_recognition_config.py
utils/: README.md  dataset_txt.py  image_rename.py
utils/gen_pseudo_labels/: 1_gen_datalist.py  2_extract_feats.py  3_gen_pseudo_labels.py  README.md
utils/model/: IR50.py  R50.py  README.md  __init__.py
utils/train_recognition/: README.md  train_recognition.py
(+4 files in other folders)
