[project]
name = "SDD-PIQA"
version = "0.1.0"
description = "SDD-PIQA project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama==0.4.6",
    "filelock==3.16.1",
    "fsspec==2024.9.0",
    "jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "matplotlib>=3.9.4",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "sympy==1.13.3",
    "torch==2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
]
